--- a/form-elements.html
+++ b/form-elements.html
@@ -572,6 +572,90 @@
                                     </tr>
                               </table>
                         </section>
+                        <section class="form-elements__messenge-style">
+                              <h2 class="visually-hidden">Сообщения</h2>
+                              <table class="form-elements__messenge-style-table">
+                                    <caption class="form-elements__messenge-style-headline">Сообщения</caption>
+                                    <tr class="form-elements__messenge-style-success">
+                                          <td class="form-elements__messenge-style-name">Успех</td>
+                                          <td>
+                                                <div class="form-elements__messenge-wrapper">
+                                                      <p class="form-elements__messenge-success1">Спасибо за заявку! Наш
+                                                            менеджер скоро свяжется с вами для
+                                                            уточнения деталей.</p>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__messenge-wrapper">
+                                                      <p class="form-elements__messenge-success2">Спасибо за заявку! Наш
+                                                            менеджер скоро свяжется с вами для
+                                                            уточнения деталей.</p>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__messenge-style-successicon">
+                                          <td class="form-elements__messenge-style-name">Успех с иконкой</td>
+                                          <td>
+                                                <div class="form-elements__messenge-wrapper">
+                                                      <p class="form-elements__messenge-successicon1">
+                                                            Спасибо за заявку! Наш менеджер скоро свяжется с вами для
+                                                            уточнения деталей.
+                                                      </p>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__messenge-wrapper">
+                                                      <p class="form-elements__messenge-successicon2">
+                                                            Спасибо за заявку! Наш менеджер скоро свяжется с вами для
+                                                            уточнения деталей.
+                                                      </p>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__messenge-style-error">
+                                          <td class="form-elements__messenge-style-name">Ошибка</td>
+                                          <td>
+                                                <div class="form-elements__messenge-wrapper">
+                                                      <p class="form-elements__messenge-error1">
+                                                            Что-то пошло не так. Пожалуйста, проверьте соединение с
+                                                            интернетом
+                                                            и повторите попытку.
+                                                      </p>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__messenge-wrapper">
+                                                      <p class="form-elements__messenge-error2">
+                                                            Что-то пошло не так. Пожалуйста, проверьте соединение с
+                                                            интернетом
+                                                            и повторите попытку.
+                                                      </p>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__messenge-style-erroricon">
+                                          <td class="form-elements__messenge-style-name">Ошибка с иконкой</td>
+                                          <td>
+                                                <div class="form-elements__messenge-wrapper">
+                                                      <p class="form-elements__messenge-erroricon1">
+                                                            Что-то пошло не так. Пожалуйста, проверьте соединение с
+                                                            интернетом
+                                                            и повторите попытку.
+                                                      </p>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__messenge-wrapper">
+                                                      <p class="form-elements__messenge-erroricon2">
+                                                            Что-то пошло не так. Пожалуйста, проверьте соединение с
+                                                            интернетом
+                                                            и повторите попытку.
+                                                      </p>
+                                                </div>
+                                          </td>
+                                    </tr>
+                              </table>
+                        </section>
 
                   </div>
             </main>
