--- a/form-elements.html
+++ b/form-elements.html
@@ -656,6 +656,158 @@
                                     </tr>
                               </table>
                         </section>
+                        <section class="form-elements__addition-style">
+                              <h2 class="visually-hidden">Дополнительно</h2>
+                              <table class="form-elements__addition-style-table">
+                                    <caption class="form-elements__addition-style-headline">Дополнительно</caption>
+                                    <tr class="form-elements__addition-style-toggle">
+                                          <td class="form-elements__addition-style-name">Тоггл</td>
+                                          <td>
+                                                <div class="form-elements__addition-wrapper">
+                                                      <form class="form-elements__addition-form">
+                                                            <ul class="form-elements__addition-toggle1">
+                                                                  <li class="addition-toggle1__option">
+                                                                        <input class="visually-hidden addition-toggle1__option-input"
+                                                                              type="radio" name="option" value="one"
+                                                                              id="addition-toggle1__option-input1">
+                                                                        <label class="addition-toggle1__input-label"
+                                                                              for="addition-toggle1__option-input1">Раз</label>
+                                                                  </li>
+                                                                  <li class="addition-toggle1__option">
+                                                                        <input class="visually-hidden addition-toggle1__option-input"
+                                                                              type="radio" name="option" value="two"
+                                                                              id="addition-toggle1__option-input2"
+                                                                              checked>
+                                                                        <label class="addition-toggle1__input-label"
+                                                                              for="addition-toggle1__option-input2">Два</label>
+                                                                  </li>
+                                                                  <li class="addition-toggle1__option">
+                                                                        <input class="visually-hidden addition-toggle1__option-input"
+                                                                              type="radio" name="option" value="three"
+                                                                              id="addition-toggle1__option-input3">
+                                                                        <label class="addition-toggle1__input-label"
+                                                                              for="addition-toggle1__option-input3">Три</label>
+                                                                  </li>
+                                                            </ul>
+                                                      </form>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__addition-wrapper">
+                                                      <form class="form-elements__addition-form">
+                                                            <ul class="form-elements__addition-toggle2">
+                                                                  <li class="addition-toggle2__option">
+                                                                        <input class="visually-hidden addition-toggle2__option-input"
+                                                                              type="radio" name="option" value="one"
+                                                                              id="addition-toggle2__option-input1">
+                                                                        <label class="addition-toggle2__input-label"
+                                                                              for="addition-toggle2__option-input1">Раз</label>
+                                                                  </li>
+                                                                  <li class="addition-toggle2__option">
+                                                                        <input class="visually-hidden addition-toggle2__option-input"
+                                                                              type="radio" name="option" value="two"
+                                                                              id="addition-toggle2__option-input2"
+                                                                              checked>
+                                                                        <label class="addition-toggle2__input-label"
+                                                                              for="addition-toggle2__option-input2">Два</label>
+                                                                  </li>
+                                                                  <li class="addition-toggle2__option">
+                                                                        <input class="visually-hidden addition-toggle2__option-input"
+                                                                              type="radio" name="option" value="three"
+                                                                              id="addition-toggle2__option-input3">
+                                                                        <label class="addition-toggle2__input-label"
+                                                                              for="addition-toggle2__option-input3">Три</label>
+                                                                  </li>
+                                                            </ul>
+                                                      </form>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__addition-style-smalltoggle">
+                                          <td class="form-elements__addition-style-name">Маленький тоггл</td>
+                                          <td>
+                                                <div class="form-elements__addition-wrapper">
+                                                      <form class="form-elements__addition-form">
+                                                            <ul class="form-elements__addition-smalltoggle1">
+                                                                  <li class="addition-smalltoggle1__option">
+                                                                        <input class="visually-hidden addition-smalltoggle1__option-input"
+                                                                              type="radio" name="option" value="one"
+                                                                              id="addition-smalltoggle1__option-input1">
+                                                                        <label class="addition-smalltoggle1__input-label"
+                                                                              for="addition-smalltoggle1__option-input1">Раз</label>
+                                                                  </li>
+                                                                  <li class="addition-smalltoggle1__option">
+                                                                        <input class="visually-hidden addition-smalltoggle1__option-input"
+                                                                              type="radio" name="option" value="two"
+                                                                              id="addition-smalltoggle1__option-input2"
+                                                                              checked>
+                                                                        <label class="addition-smalltoggle1__input-label"
+                                                                              for="addition-smalltoggle1__option-input2">Два</label>
+                                                                  </li>
+                                                                  <li class="addition-smalltoggle1__option">
+                                                                        <input class="visually-hidden addition-smalltoggle1__option-input"
+                                                                              type="radio" name="option" value="three"
+                                                                              id="addition-smalltoggle1__option-input3">
+                                                                        <label class="addition-smalltoggle1__input-label"
+                                                                              for="addition-smalltoggle1__option-input3">Три</label>
+                                                                  </li>
+                                                            </ul>
+                                                      </form>
+                                                </div>
+                                          </td>
+                                          <td>
+                                                <div class="form-elements__addition-wrapper">
+                                                      <form class="form-elements__addition-form">
+                                                            <ul class="form-elements__addition-smalltoggle2">
+                                                                  <li class="addition-smalltoggle2__option">
+                                                                        <input class="visually-hidden addition-smalltoggle2__option-input"
+                                                                              type="radio" name="option" value="one"
+                                                                              id="addition-smalltoggle2__option-input1">
+                                                                        <label class="addition-smalltoggle2__input-label"
+                                                                              for="addition-smalltoggle2__option-input1">Раз</label>
+                                                                  </li>
+                                                                  <li class="addition-smalltoggle2__option">
+                                                                        <input class="visually-hidden addition-smalltoggle2__option-input"
+                                                                              type="radio" name="option" value="two"
+                                                                              id="addition-smalltoggle2__option-input2"
+                                                                              checked>
+                                                                        <label class="addition-smalltoggle2__input-label"
+                                                                              for="addition-smalltoggle2__option-input2">Два</label>
+                                                                  </li>
+                                                                  <li class="addition-smalltoggle2__option">
+                                                                        <input class="visually-hidden addition-smalltoggle2__option-input"
+                                                                              type="radio" name="option" value="three"
+                                                                              id="addition-smalltoggle2__option-input3">
+                                                                        <label class="addition-smalltoggle2__input-label"
+                                                                              for="addition-smalltoggle2__option-input3">Три</label>
+                                                                  </li>
+                                                            </ul>
+                                                      </form>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="form-elements__addition-style-checkbox">
+                                          <td class="form-elements__addition-style-name">Чекбокс</td>
+                                          <td class="form-elements__addition-style-content">
+                                                <div class="form-elements__addition-wrapper">
+                                                      <form class="form-elements__addition-form">
+                                                            <ul class="form-elements__addition-checkbox">
+                                                                  <li class="addition-checkbox__option">
+                                                                        <input class="visually-hidden addition-checkbox__option-input"
+                                                                              type="checkbox" name="option" value="one"
+                                                                              id="addition-checkbox__option-input1">
+                                                                        <label class="addition-checkbox__input-label"
+                                                                              for="addition-checkbox__option-input1">Чекбокс</label>
+                                                                  </li>
+                                                            </ul>
+                                                      </form>
+                                                </div>
+                                          </td>
+
+                                    </tr>
+                              </table>
+                        </section>
+
 
                   </div>
             </main>
