--- a/modal-map.html
+++ b/modal-map.html
@@ -84,33 +84,63 @@
                                     <caption class="modal-map__notice-style-headline">Уведомления</caption>
                                     <tr class="modal-map__notice-style-ordinary">
                                           <td class="modal-map__notice-style-name">Обычное</td>
-                                          <td>
+                                          <td class="modal-map__addition-style-content">
                                                 <div class="modal-map__notice-ordinary">
-
-                                                </div>
-                                          </td>
-                                          <td>
-                                                <div class="modal-map__notice-ordinary">
+                                                      <button class="notice-ordinary__button" type="button"
+                                                            value="open">Показать уведомление</button>
+                                                      <div class="notice-ordinary__modal-map-wrapper">
+                                                            <div class="notice-ordinary__modal-map">
+                                                                  <p class="notice-ordinary__modal-map-header">Нужна
+                                                                        почта</p>
+                                                                  <p class="notice-ordinary__modal-map-main">Это нужно,
+                                                                        чтобы мы могли отправлять вам последнюю
+                                                                        информацию</p>
+                                                                  <a href=""
+                                                                        class="notice-ordinary__modal-map-link">Вывести
+                                                                        почту</a>
+                                                                  <button class="notice-ordinary__modal-map-close"
+                                                                        type="button" value="close"></button>
+                                                            </div>
+                                                      </div>
 
                                                 </div>
                                           </td>
                                     </tr>
                                     <tr class="modal-map__notice-style-snackbar">
-                                          <td class="modal-map__notice-style-name">Снекбар</td>
-                                          <td>
-
-                                          </td>
-                                          <td>
-
+                                          <td class="modal-map__notice-style-name">Снэкбар</td>
+                                          <td class="modal-map__addition-style-content">
+                                                <div class="modal-map__notice-snackbar">
+                                                      <button class="notice-snackbar__button" type="button"
+                                                            value="open">Показать снэкбар</button>
+                                                      <div
+                                                            class="notice-snackbar__modal-map-wrapper notice-snackbar__modal-map-close">
+                                                            <div class="notice-snackbar__modal-map">
+                                                                  <p class="notice-snackbar__modal-map-main">Вы удалили
+                                                                        сообщение</p>
+                                                                  <button class="notice-snackbar__modal-map-cancel"
+                                                                        type="button" value="cancel">Отменить
+                                                                        действие</button>
+                                                            </div>
+                                                      </div>
+                                                </div>
                                           </td>
                                     </tr>
                                     <tr class="modal-map__notice-style-tost">
                                           <td class="modal-map__notice-style-name">Тост</td>
-                                          <td>
-
-                                          </td>
-                                          <td>
-
+                                          <td class="modal-map__addition-style-content">
+                                                <div class="modal-map__notice-tost">
+                                                      <button class="notice-tost__button" type="button"
+                                                            value="open">Показать тост</button>
+                                                      <div class="notice-tost__modal-map-wrapper">
+                                                            <div class="notice-tost__modal-map">
+                                                                  <p class="notice-tost__modal-map-main">Вы удалили
+                                                                        сообщение</p>
+                                                                  <button class="notice-tost__modal-map-cancel"
+                                                                        type="button" value="cancel">Отменить
+                                                                        действие</button>
+                                                            </div>
+                                                      </div>
+                                                </div>
                                           </td>
                                     </tr>
                               </table>
