--- a/modal-map.html
+++ b/modal-map.html
@@ -98,7 +98,7 @@
                                                                   <a href=""
                                                                         class="notice-ordinary__modal-map-link">Вывести
                                                                         почту</a>
-                                                                  <button class="notice-ordinary__modal-map-close"
+                                                                  <button class="notice-ordinary__modal-map-closebutton"
                                                                         type="button" value="close"></button>
                                                             </div>
                                                       </div>
@@ -112,8 +112,7 @@
                                                 <div class="modal-map__notice-snackbar">
                                                       <button class="notice-snackbar__button" type="button"
                                                             value="open">Показать снэкбар</button>
-                                                      <div
-                                                            class="notice-snackbar__modal-map-wrapper notice-snackbar__modal-map-close">
+                                                      <div class="notice-snackbar__modal-map-wrapper">
                                                             <div class="notice-snackbar__modal-map">
                                                                   <p class="notice-snackbar__modal-map-main">Вы удалили
                                                                         сообщение</p>
@@ -148,6 +147,7 @@
                   </div>
             </main>
       </div>
+      <script src="js/scripts.js"></script>
 </body>
 
 </html>
