--- a/modal-map.html
+++ b/modal-map.html
@@ -79,12 +79,12 @@
                                     элемент, который можно найти в списке элементов.</p>
                         </header>
                         <section class="modal-map__notice-style">
-                              <h2 class="visually-hidden">Поля</h2>
+                              <h2 class="visually-hidden">Уведомления</h2>
                               <table class="modal-map__notice-style-table">
                                     <caption class="modal-map__notice-style-headline">Уведомления</caption>
                                     <tr class="modal-map__notice-style-ordinary">
                                           <td class="modal-map__notice-style-name">Обычное</td>
-                                          <td class="modal-map__addition-style-content">
+                                          <td class="modal-map__notice-style-content">
                                                 <div class="modal-map__notice-ordinary">
                                                       <button class="notice-ordinary__button" type="button"
                                                             value="open">Показать уведомление</button>
@@ -108,7 +108,7 @@
                                     </tr>
                                     <tr class="modal-map__notice-style-snackbar">
                                           <td class="modal-map__notice-style-name">Снэкбар</td>
-                                          <td class="modal-map__addition-style-content">
+                                          <td class="modal-map__notice-style-content">
                                                 <div class="modal-map__notice-snackbar">
                                                       <button class="notice-snackbar__button" type="button"
                                                             value="open">Показать снэкбар</button>
@@ -126,7 +126,7 @@
                                     </tr>
                                     <tr class="modal-map__notice-style-tost">
                                           <td class="modal-map__notice-style-name">Тост</td>
-                                          <td class="modal-map__addition-style-content">
+                                          <td class="modal-map__notice-style-content">
                                                 <div class="modal-map__notice-tost">
                                                       <button class="notice-tost__button" type="button"
                                                             value="open">Показать тост</button>
@@ -138,6 +138,67 @@
                                                                         type="button" value="cancel">Отменить
                                                                         действие</button>
                                                             </div>
+                                                      </div>
+                                                </div>
+                                          </td>
+                                    </tr>
+                              </table>
+                        </section>
+                        <section class="modal-map__map-style">
+                              <h2 class="visually-hidden">Окна</h2>
+                              <table class="modal-map__map-style-table">
+                                    <caption class="modal-map__map-style-headline">Окна</caption>
+                                    <tr class="modal-map__map-style-ordinary">
+                                          <td class="modal-map__map-style-name">Обычное</td>
+                                          <td class="modal-map__map-style-content">
+                                                <div class="modal-map__map-ordinary">
+                                                      <button class="map-ordinary__button" type="button"
+                                                            value="open">Показать окно</button>
+                                                      <div class="map-ordinary__modal-map-wrapper">
+                                                            <div class="map-ordinary__modal-map-container">
+                                                                  <div class="map-ordinary__modal-popup">
+                                                                        <h2 class="map-ordinary__modal-popup-headline">
+                                                                              Новое напоминание</h2>
+                                                                        <p class="map-ordinary__modal-popup-text">Вы
+                                                                              готовы создать новое напоминание?</p>
+                                                                        <div
+                                                                              class="map-ordinary__modal-popup-button-container">
+                                                                              <button
+                                                                                    class="map-ordinary__modal-popup-button1"
+                                                                                    type="button"
+                                                                                    value="create">Создать</button>
+                                                                              <button
+                                                                                    class="map-ordinary__modal-popup-button2"
+                                                                                    type="button"
+                                                                                    value="cancel">Отмена</button>
+                                                                        </div>
+                                                                        <button
+                                                                              class="map-ordinary__modal-popup-closebutton"
+                                                                              type="button" value="close"></button>
+
+                                                                  </div>
+
+                                                            </div>
+
+                                                      </div>
+
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="modal-map__map-style-random">
+                                          <td class="modal-map__map-style-name">С произвольной шириной</td>
+                                          <td class="modal-map__map-style-content">
+                                                <div class="modal-map__map-random">
+                                                      <button class="map-random__button" type="button"
+                                                            value="open">Показать окно</button>
+                                                      <div class="map-random__modal-map-wrapper">
+                                                            <div class="map-random__modal-map-container">
+                                                                  <div class="map-random__modal-popup">
+
+                                                                  </div>
+
+                                                            </div>
+
                                                       </div>
                                                 </div>
                                           </td>
